--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
+        "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -15,6 +15,7 @@
         "clsx": "^2.1.1",
         "crypto-random-string": "^5.0.0",
         "immer": "^10.1.1",
+        "ios-vibrator-pro-max": "^1.3.0",
         "motion": "^12.5.0",
         "next": "15.2.2",
         "react": "^19.0.0",
