--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev --turbo",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -12,6 +12,8 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.6.1",
+        "@supabase/ssr": "^0.6.1",
+        "@supabase/supabase-js": "^2.49.1",
         "clsx": "^2.1.1",
         "crypto-random-string": "^5.0.0",
         "immer": "^10.1.1",
@@ -21,6 +23,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-redux": "^9.2.0",
+        "redux-persist": "^6.0.0",
         "tailwind-merge": "^3.0.2"
     },
     "devDependencies": {
