--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@reduxjs/toolkit": "^2.6.1",
         "@supabase/ssr": "^0.6.1",
         "@supabase/supabase-js": "^2.49.1",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "crypto-random-string": "^5.0.0",
         "immer": "^10.1.1",
